small alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -97,8 +97,8 @@ span.navbar-text {
 .navbar-text button {
   font-weight: 700;
   color: #fff;
-  border: 1px solid #fff;
-  padding: 18px 34px;
+  border: 21px solid #fff;
+  padding: 18px 60px !important;
   font-size: 18px;
   margin-left: 18px;
 	position: relative;
@@ -137,7 +137,7 @@ nav.navbar .navbar-toggler:focus {
 /************ Banner Css ************/
 .banner {
   margin-top: 0;
-  padding: 250px 0 100px 0;
+  padding: 245px 0 130px 0;
   background-size: 160px;
   background-image: url('./assets/banner-bg.png');
   background-position: top;
@@ -170,26 +170,36 @@ nav.navbar .navbar-toggler:focus {
   width: 96%;
 }
 .banner button {
-  border: 1px solid #000000;
+  border: 1px solid #ffffff;
   background-color: black;
   color: #ffffff;
   font-weight: 700;
   font-size: 20px;
   margin-top: 60px;
-  letter-spacing: 0.9px;
+  letter-spacing: 0.8px;
   display: flex;
-  padding: 1px 10px;
+  padding: 9px 15px;
   align-items: center;
 }
+
+.banner button:hover {
+  background-color: rgb(102, 199, 251);
+  color: #000000;
+}
+
 .banner button svg {
   font-size: 25px;
   margin-left: 10px;
   transition: 0.3s ease-in-out;
   line-height: 1;
 }
+
 .banner button:hover svg {
   margin-left: 25px;
+  background-color: rgb(102, 199, 251);
+  color: #000000;
 }
+
 .navbar-text button {
   font-weight: 700;
   color: #fff;
@@ -206,18 +216,12 @@ nav.navbar .navbar-toggler:focus {
   border-right: 0.08em solid #666;
 }
 /******skills************/
-
 .skill {
-  padding: 55px 0 100px 0;
-}
-
-.skill {
-  padding: 106px 0;
+  padding: 120px 10px 60px 0px;
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  margin: 10px;
 }
 
 .row {
@@ -225,9 +229,12 @@ nav.navbar .navbar-toggler:focus {
   flex-wrap: wrap;
   align-items: center;
 }
-
+.col-header{
+  padding: 1px 15px;
+}
 .about-me-paragraph{
   font-size:18px;
+  padding: 0px 15px;
 }
 
 .col-md-4 {
@@ -263,15 +270,6 @@ p {
   line-height: 1.6;
 }
 
-a {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
 .strengths {
   margin-top: 20px;
 }
@@ -292,12 +290,10 @@ a:hover {
 }
 
 /********** Academics.css**********/
-
 .project {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 10px;
+  align-items: center
 }
 
 .tabs {
@@ -305,16 +301,17 @@ a:hover {
   justify-content: center;
   align-items: flex-end; /* Align tabs with the bottom of the panels */
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 60px;
 }
 
 .tab {
-  padding: 10px 80px;
+  padding: 15px 80px ;
   background-color: #f0f0f0;
-  border: 1px solid #ccc;
+  border: 0px solid #ccc;
   border-radius: 15px;
   cursor: pointer;
-  margin: 0px 5px; /* Add some spacing between tabs */
+  font-size: 18px;
+  margin: 0px 4px; /* Add some spacing between tabs */
 }
 
 .tab.active {
@@ -326,7 +323,7 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 77%;
+  padding: 5px 40px 0px 40px;
 }
 
 .panel {
@@ -351,18 +348,17 @@ a:hover {
 .section-title-ul{
   background-color: #ffffff;
   color:rgb(0, 0, 0);
-  font-size: 17px;
+  font-size: 18px;
 }
 
-
-
 /************ Projects Css ************/
-.project {
-  padding: 65px 0;
+
+.header-project{
+  margin-top: 85px !important;
 }
 
 .project-box {
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 
 .project-content h3{
@@ -409,7 +405,7 @@ a:hover {
 
 /************ Footer Css ************/
 .footer {
-  padding: 33px 20px;
+  padding: 10px 10px;
   background-image: url('./assets/banner-bg.png');
   background-position: center center;
   background-size: cover;
@@ -417,12 +413,12 @@ a:hover {
 }
 
 .footer img {
-  width: 295px;
+  width: 250px;
   height: 58px;
 }
 .footer p {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 15px;
   color: #B8B8B8;
   letter-spacing: 0.5px;
   margin-top: 20px;
